adding generated favicons for all platforms

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,11 +32,16 @@
     <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
     <script src="/plugins/respond/respond.min.js"></script>
     <![endif]-->
-    <!-- Le fav and touch icons - @todo: fill with your icons or remove -->
-    <!-- link rel="shortcut icon" href="/img/icons/favicon.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/icons/114x114.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/icons/72x72.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" href="/img/icons/default.png" -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/apple-touch-icon-76x76.png">
+    <link rel="icon" type="image/png" href="/img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/img/favicons/manifest.json">
+    <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#98002e">
+    <meta name="msapplication-TileColor" content="#98002e">
+    <meta name="theme-color" content="#ffffff">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Rambla' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
