moved container divs to default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,11 @@
   </head>
 {% include header.html %}
 <div role="main">
-{{ content }}
+  <div id="content">
+    <div class="container">
+      {{ content }}
+    </div>
+  </div>
 </div>
 {% include footer.html %}
 <!--Scripts -->
