--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -6,10 +6,27 @@ html {
 }
 
 h2 {
-  font-size:1.3em;
+  font-size: 1.4em;
   font-weight: 600;
   line-height: 1.1;
   text-transform: uppercase;
+}
+
+h3 {
+  color: $theme-colour;
+  font-size: 1.1em;
+  line-height: 1.4;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+h4 {
+  font-size: 1.2em;
+  line-height: 1;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: $footer-text-colour;
 }
 
 a {
@@ -20,41 +37,4 @@ a {
     color: $link-hover;
     text-decoration: none !important;
   }
-}
-
-.slide h2 {
-	color: $theme-colour;
-	font-weight: bold !important;
-  font-size: 1.1em;
-  line-height: 1.4;
-}
-
-h3,
-h4,
-h5 {
-  color: $theme-colour;
-  font-weight: bold;
-}
-
-h4 span {
-  text-transform: none;
-}
-
-h5,
-.about-page h3,
-.data-page h3,
-.terms-page h3,
-.privacy-page h3,
-.accessibility-page h3 {
-  font-size: 1em;
-  text-transform: none;
-  margin: 10px 0;
-}
- h4,
-#SurveyFeatures h3,
-#SurveyServices h3,
-.faq-page h3 {
-  font-size: 1.1em;
-  line-height: 1.4;
-  text-transform: uppercase;
 }
