--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,72 +1,67 @@
-  <!-- ======== @Region: body ======== -->
-<body class="page page-index-static" id="top">
-  <a href="#content" class="sr-only">Skip to content</a>
-  <!-- ======== @Region: #navigation ======== -->
-  <div id="navigation" class="wrapper">
-    <div class="navbar-static-top">
-      <!--Header upper region-->
-      <div class="header-upper">
-        <div class="header-upper-inner container">
-        </div>
-      </div>
-      <!--Header & Branding region-->
-      <div class="header">
-        <div class="header-inner container">
-          <div class="navbar" role="navigation">
-            <div class="pull-left logo-box">
-              <a class="navbar-brand" href="/" title="Home">
-                <h1>
-                  <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey">
-                  <span class="sr-only">Web Survey</span>
-                </h1>
-              </a>
-              <div class="slogan">online data collection expertise</div>
-            </div>
-            <div class="contact-icon-box">
-              <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span>+613 9340 9001</span>
-            </div>
-            <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right">
-              <i class="fa fa-bars"></i><span class="sr-only">Collapsable Menu</span>
+<!-- ======== @Region: #navigation ======== -->
+<div id="navigation">
+  <div class="navbar-static-top">
+    <!--Header upper region-->
+    <div class="header-upper">
+    </div>
+    <!--Header & Branding region-->
+    <div class="header">
+      <div class="header-inner container">
+        <div class="navbar">
+          <div class="pull-left logo-box">
+            <a class="navbar-brand" href="/" title="Home">
+              <h1>
+                <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey">
+                <span class="sr-only">Web Survey</span>
+              </h1>
             </a>
-            <!--everything within this div is collapsed on mobile-->
-            <div class="navbar-collapse collapse">
-              <!--main navigation-->
-              <ul class="nav navbar-nav">
-                <li class="home-link active">
-                  <a href="/"><i class="fa fa-home"></i><span class="sr-only">Home</span></a>
-                </li>
-               <li>
-                  <a href="/about/">About</a>
-                </li>
-                <li>
-                  <a href="/features/">Features</a>
-                </li>
-                <li>
-                  <a href="/services/">Services</a>
-                </li>
-                <li>
-                  <a href="/data-collection/">Data Collection</a>
-                </li>
-                <li class="dropdown">
-                  <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown" data-toggle="dropdown">FAQ</a>
-                  <!-- Menu -->
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="/faq/" class="menu-item">Getting started</a></li>
-                    <li><a href="/faq/technical-features.html" class="menu-item">Technical Features</a></li>
-                    <li><a href="/faq/about-web-survey.html" class="menu-item">About WebSurvey</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="/contact/">Contact</a>
-                </li>
-                <li>
-                  <a href="https://demo.websurvey.net.au/" target="_blank">Demo survey <span class="sr-only">(opens new window)</span></a>
-                </li>
-              </ul>
-            </div>
-            <!--/.navbar-collapse -->
+            <div class="slogan">online data collection expertise</div>
           </div>
+          <div class="contact-icon-box">
+            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span>+613 9340 9001</span>
+          </div>
+          <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right">
+            <i class="fa fa-bars"></i><span class="sr-only">Collapsable Menu</span>
+          </a>
+          <!--everything within this div is collapsed on mobile-->
+          <div class="navbar-collapse collapse" role="navigation">
+            <!--main navigation-->
+            <ul class="nav navbar-nav">
+              <li class="home-link active">
+                <a href="/"><i class="fa fa-home"></i><span class="sr-only">Home</span></a>
+              </li>
+             <li>
+                <a href="/about/">About</a>
+              </li>
+              <li>
+                <a href="/features/">Features</a>
+              </li>
+              <li>
+                <a href="/services/">Services</a>
+              </li>
+              <li>
+                <a href="/data-collection/">Data Collection</a>
+              </li>
+              <li class="dropdown">
+                <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown" data-toggle="dropdown">FAQ</a>
+                <!-- Menu -->
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="/faq/" class="menu-item">Getting started</a></li>
+                  <li><a href="/faq/technical-features.html" class="menu-item">Technical Features</a></li>
+                  <li><a href="/faq/about-web-survey.html" class="menu-item">About WebSurvey</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="/contact/">Contact</a>
+              </li>
+              <li>
+                <a href="https://demo.websurvey.net.au/" target="_blank">Demo survey <span class="sr-only">(opens new window)</span></a>
+              </li>
+            </ul>
+          </div>
+          <!--/.navbar-collapse -->
         </div>
       </div>
     </div>
   </div>
+</div>
