remvoing css file no longer used

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,12 +16,12 @@
 @import "base/typography";
 
 /* Theme */
-@import "theme/theme-style";
 @import "theme/websurvey";
 
 /* Includes */
 @import "includes/footer";
 @import "includes/header";
+@import "includes/navbar";
 @import "includes/sidebar";
 
 /* Individual pages */
