--- a/_sass/includes/_sidebar.scss
+++ b/_sass/includes/_sidebar.scss
@@ -13,9 +13,7 @@
       a {
         color: $sidebar-font;
         color: rgba(27, 27, 27, 0.7);
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        border-radius: 0;
+        @include roundedCorners(0);
         font-weight: bold;
         font-size: 18px;
         border: 1px solid $border-grey;
@@ -40,14 +38,10 @@
           top: 20px;
           right: 20px;
           color: $sidebar-bg-hover;
-          -webkit-transform: rotate(90deg);
-          -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
+          @include rotating(90);
           @include desktop {
             right: 10px;
-            -webkit-transform: rotate(0deg);
-            -ms-transform: rotate(0deg);
-            transform: rotate(0deg);
+            @include rotating(0);
           }
         }
         small {
