--- a/_sass/theme/_websurvey.scss
+++ b/_sass/theme/_websurvey.scss
@@ -1,17 +1,13 @@
 html,
 body {
   background-color: $body-background;
-  height: 100%;
 }
 
 #content {
   min-height: 100%;
-  padding: 30px 0;
+  padding-bottom: 30px;
   height: auto !important;
   height: 100%;
-  @include desktop {
-    margin: 0 auto -200px;
-  }
 }
 
 p {
