--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,28 @@
     <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
     <script src="/plugins/respond/respond.min.js"></script>
     <![endif]-->
-    <!-- Le fav and touch icons - @todo: fill with your icons or remove -->
-    <!-- link rel="shortcut icon" href="/img/icons/favicon.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/icons/114x114.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/icons/72x72.png" -->
-    <!-- link rel="apple-touch-icon-precomposed" href="/img/icons/default.png" -->
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/img/favicons/manifest.json">
+    <link rel="icon" href="/img/favicons/safari-pinned-tab.svg">
+    <meta name="theme-color" content="#98002e">
+    <meta name="msapplication-TileColor" content="#98002e">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Rambla' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
