moved animate css to vendor scss folder

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 ---
 
 /* External stylesheets */
+@import "vendors/animate";
 @import "vendors/bootstrap";
 @import "vendors/font-awesome";
 @import "vendors/gallery";
