--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -81,6 +81,9 @@
         margin-top:0;
       }
     }
+    #mc_embed_signup {
+      clear:left;
+    }
     #mce-success-response {
       color: $footer-success-colour !important;
     }
