--- a/_sass/theme/_websurvey.scss
+++ b/_sass/theme/_websurvey.scss
@@ -3,6 +3,10 @@ body {
   background-color: $body-background;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 #content {
   min-height: 100%;
   padding-bottom: 30px;
@@ -17,7 +21,7 @@ p {
 /* all pages */
 .title-divider {
   text-align: left;
-  margin-bottom: 1em;
+  margin: 2em 0 1em;
   background: $body-background url(../img/bg_divider.png) left center repeat-x;
   padding: 0;
   span {
@@ -26,14 +30,13 @@ p {
     span {
       text-transform: none;
       padding-right: 0em;
-      font-weight: normal;
     }
   }
 }
 
 /* Default buttons */
 [class^='btn'] {
-  border-radius: 4px;
+  @include roundedCorners(4);
   font-weight:bold;
 }
 
@@ -46,11 +49,6 @@ p {
   &:active {
     background-color: $button-bg-hover;
   }
-}
-
-/* features and services pages */
-#SurveyFeatures, #SurveyServices {
-  padding-top: 1em;
 }
 
 .feature-icon {
