replacing googlemaps link with static image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,19 +11,19 @@
           <address>
             <ul class="fa-ul">
               <li>
-                <abbr title="Phone"> <i class="fa fa-li fa-phone"></i> </abbr>
+                <span class="sr-only">Phone number:</span><i class="fa fa-li fa-phone"></i>
                 +613 9340 9001
               </li>
               <li>
-                <abbr title="Email"> <i class="fa fa-li">@</i> </abbr>
+                <span class="sr-only">Email:</span><i class="fa fa-li">@</i>
                 <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a>
               </li>
               <li>
-                <abbr title="Address"> <i class="fa fa-li fa-home"></i> </abbr>
+                <span class="sr-only">Street Address:</span><i class="fa fa-li fa-home"></i>
                 2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
               </li>
               <li>
-                <abbr title="Address"> <i class="fa fa-li fa-envelope"></i> </abbr>
+                <span class="sr-only">Mailing Address:</span><i class="fa fa-li fa-envelope"></i>
                 PO Box 1166, Carlton, Victoria 3053, Australia
               </li>
             </ul>
