updating favicon links for firefox and ie

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,14 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="/img/favicons/safari-pinned-tab.svg">
     <link rel="icon" type="image/png" href="/img/favicons/favicon-194x194.png" sizes="194x194">
     <link rel="icon" type="image/png" href="/img/favicons/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/img/favicons/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" type="image/png" href="/img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/x-icon" href="/img/favicons/favicon.ico" sizes="16x16">
+    <link rel="icon" type="image/png" href="/img/favicons/favicon-32x32.png" sizes="32x32">
     <link rel="manifest" href="/img/favicons/manifest.json">
-    <link rel="icon" href="/img/favicons/safari-pinned-tab.svg">
     <meta name="theme-color" content="#98002e">
     <meta name="msapplication-TileColor" content="#98002e">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
