added phone links to numbers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <ul class="fa-ul">
               <li>
                 <span class="sr-only">Phone number:</span><i class="fa fa-li fa-phone"></i>
-                +613 9340 9001
+                <a href="tel:0393409001">+613 9340 9001 <span class="sr-only">(calls number)</span></a>
               </li>
               <li>
                 <span class="sr-only">Email:</span><i class="fa fa-li">@</i>
