--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
             <div class="slogan">online data collection expertise</div>
           </div>
           <div class="contact-icon-box">
-            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span>+613 9340 9001</span>
+            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span><a href="tel:0393409001">+613 9340 9001 <span class="sr-only">(calls number)</span></a></span>
           </div>
           <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right">
             <i class="fa fa-bars"></i><span class="sr-only">Collapsable Menu</span>
