--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ page.title }} - WebSurvey</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>{{ page.title }}</title>
+    <meta http-equiv="refresh" content="5;url=http://www.websurvey.com.au/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web Surveys">
-    <meta name="keywords" content="Web Survey Online Data Collection Analysis">
+    <meta name="description" content={{ page.description }}>
+    <meta name="keywords" content="Web Survey, Online, Data Collection, Analysis">
     <meta name="author" content="Themelize.me">
 
     <!-- Stylesheets -->
