--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
     <meta http-equiv="refresh" content="5;url=http://www.websurvey.com.au/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content={{ page.description }}>
-    <meta name="keywords" content="Web Survey, Online, Data Collection, Analysis">
+    <meta name="description" content="{{ page.description }}">
     <meta name="author" content="Themelize.me">
 
     <!-- Stylesheets -->
