--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 @import "vendors/bootstrap";
 @import "vendors/font-awesome";
 @import "vendors/gallery";
+@import "vendors/mailchimp";
 
 /* Helpers needed for other files */
 @import "helpers/variables";
