restyling contact page

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -120,6 +120,7 @@
       text-transform: uppercase;
       font-weight: bold;
       font-size: 1.3em;
+      color: $theme-colour;
       a {
         color: $theme-colour;
         &:focus,
