--- a/_sass/theme/_websurvey.scss
+++ b/_sass/theme/_websurvey.scss
@@ -72,8 +72,12 @@ input[type="submit"] {
   text-align: center;
   a {
     img {
-      width: 90%;
-      height: 90%;
+      width: 80%;
+      height: 80%;
+      @include small {
+        width: 100%;
+        height: 100%;
+      }
     }
     &:focus,
     &:hover {
