--- a/_sass/theme/_websurvey.scss
+++ b/_sass/theme/_websurvey.scss
@@ -74,7 +74,7 @@ input[type="submit"] {
     img {
       width: 80%;
       height: 80%;
-      @include small {
+      @include tablet {
         width: 100%;
         height: 100%;
       }
