adding gulp to combine and min files for performance

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,26 +9,26 @@
     <meta name="author" content="Themelize.me">
 
     <!-- Stylesheets -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="/css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="public/css/ws-main.min.css" rel="stylesheet">
 
     <!-- Favicon links -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/favicons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/favicons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon-180x180.png">
-    <link rel="icon" href="/img/favicons/safari-pinned-tab.svg">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/x-icon" href="/img/favicons/favicon.ico" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="manifest" href="/img/favicons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="public/img/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="public/img/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="public/img/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="public/img/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="public/img/favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/img/favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="public/img/favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/img/favicons/apple-touch-icon-180x180.png">
+    <link rel="icon" href="public/img/favicons/safari-pinned-tab.svg">
+    <link rel="icon" type="image/png" href="public/img/favicons/favicon-194x194.png" sizes="194x194">
+    <link rel="icon" type="image/png" href="public/img/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="public/img/favicons/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="public/img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/x-icon" href="public/img/favicons/favicon.ico" sizes="16x16">
+    <link rel="icon" type="image/png" href="public/img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="manifest" href="public/img/favicons/manifest.json">
     <meta name="theme-color" content="#98002e">
     <meta name="msapplication-TileColor" content="#98002e">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
@@ -40,11 +40,7 @@
       <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
       <script src="/plugins/respond/respond.min.js"></script>
     <![endif]-->
-    <script src="/js/jquery.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="/js/bootstrap.min.js"></script>
-    <!--Custom scripts mainly used to trigger libraries/plugins -->
-    <script src="/js/script.min.js"></script>
+    <script src="public/js/ws-main.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
