--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
           <div class="pull-left logo-box">
             <a class="navbar-brand" href="/" title="Home">
               <h1>
-                <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey">
+                <img src="public/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey">
                 <span class="sr-only">Web Survey</span>
               </h1>
             </a>
