adding gulp to combine and min files for performance

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
       <script src="/plugins/respond/respond.min.js"></script>
     <![endif]-->
-    <script src="/js/ws-main.min.js"></script>
+    <script src="/minjs/ws-main.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
