--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,20 @@
 
           <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
-            <form action="//websurvey.us11.list-manage.com/subscribe/post?u=b1dbc0432a40a6e28b4984351&amp;id=51589fb78a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <form
+                  action="//websurvey.us11.list-manage.com/subscribe/post?u=b1dbc0432a40a6e28b4984351&amp;id=51589fb78a"
+                  method="post"
+                  id="mc-embedded-subscribe-form"
+                  name="mc-embedded-subscribe-form"
+                  class="validate"
+                  target="_blank"
+                  novalidate
+                  onsubmit="  ga('send', {
+                              hitType: 'event',
+                              eventCategory: 'Subscriptions',
+                              eventAction: 'signup',
+                              eventLabel: 'Newsletter'
+                            });">
               <div id="mc_embed_signup_scroll">
                 <div class="indicates-required">
                   <span class="asterisk">*</span> indicates required
