--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,15 +12,41 @@
             <ul class="fa-ul">
               <li>
                 <span class="sr-only">Phone number:</span><i class="fa fa-li fa-phone"></i>
-                <a href="tel:0393409001">+613 9340 9001 <span class="sr-only">(calls number)</span></a>
+                <a  href="tel:0393409001"
+                    onclick=" ga('send', {
+                              hitType: 'event',
+                              eventCategory: 'Contact',
+                              eventAction: 'link',
+                              eventLabel: 'Phone'
+                          });"
+                          >
+                  +613 9340 9001 <span class="sr-only">(calls number)</span>
+                </a>
               </li>
               <li>
                 <span class="sr-only">Email:</span><i class="fa fa-li">@</i>
-                <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a>
+                <a href="mailto:info@websurvey.com.au"
+                onclick=" ga('send', {
+                          hitType: 'event',
+                          eventCategory: 'Contact',
+                          eventAction: 'link',
+                          eventLabel: 'Email'
+                      });">
+                  info@websurvey.com.au
+                </a>
               </li>
               <li>
                 <span class="sr-only">Street Address:</span><i class="fa fa-li fa-home"></i>
-                2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
+                <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US"
+                target="_blank"
+                onclick=" ga('send', {
+                          hitType: 'event',
+                          eventCategory: 'Contact',
+                          eventAction: 'link',
+                          eventLabel: 'Address'
+                      });">
+                      2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
+                </a>
               </li>
               <li>
                 <span class="sr-only">Mailing Address:</span><i class="fa fa-li fa-envelope"></i>
