testing fixes for old IEs

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -190,6 +190,12 @@
   }
 }
 
+.clients {
+  .gallery {
+    height: 160px;
+  }
+}
+
 .space-below {
   @include desktop {
     margin-bottom: 1em;
