--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -22,6 +22,8 @@
           padding: 0;
           margin: 6px 0 0 0;
           height: auto;
+          height: 67px\9;
+          width: 300px\9;
           h1 {
             margin: 0;
           }
