testing fixes for old IEs

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -190,9 +190,16 @@
   }
 }
 
+/* Adding overriding styling of the gallery for IE8 support */
 .clients {
   .gallery {
     height: 160px\9;
+    .item a {
+      width: auto\9;
+    }
+    .controls {
+      display: none\9;
+    }
   }
 }
 
