testing fixes for old IEs

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -195,7 +195,7 @@
   .gallery {
     height: 160px\9;
     .item {
-      position: relative;
+      position: relative\9;
         /*a {
         width: auto\9;
       }*/
