--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -120,9 +120,9 @@
             </a> business. &copy; {{ site.time | date: '%Y' }}
           </span>
           <ul class="list-inline footer-menu">
-            <li><a href="/about/terms.html">Terms</a></li>
-            <li><a href="/about/accessibility.html">Accessibility</a></li>
-            <li><a href="/about/privacy.html">Privacy</a></li>
+            <li><a href="/about/terms/">Terms</a></li>
+            <li><a href="/about/accessibility/">Accessibility</a></li>
+            <li><a href="/about/privacy/">Privacy</a></li>
             <li><a href="/contact/">Contact Us</a></li>
           </ul>
         </div>
