--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
                 <!-- Menu -->
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="/faq/" class="menu-item">Getting started</a></li>
-                  <li><a href="/faq/technical-features.html" class="menu-item">Technical Features</a></li>
+                  <li><a href="/faq/technical-features/" class="menu-item">Technical Features</a></li>
                 </ul>
               </li>
               <li>
