--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
         </a>
       </li>
       <li {% if include.param == "technical" %} class="active" {% endif %}>
-        <a href="/faq/technical-features.html" class="first">
+        <a href="/faq/technical-features/" class="first">
           Technical Features
           <small>Secure and Accessible</small>
           <i class="fa fa-angle-right"></i>
