Added case studies

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,6 +50,9 @@
               <li>
                 <a href="/data-collection/">Data Collection</a>
               </li>
+              <li>
+                <a href="/case-studies/">Case Studies</a>
+              </li>
               <li class="dropdown">
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown" data-toggle="dropdown">FAQ</a>
                 <!-- Menu -->
