Removing Stay in touch-box that's not working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,13 +57,14 @@
           <!-- /address -->
         </div>
       </div>
-      <div class="col-md-4 col">
+      <!-- Hiding Stay in touch box that is not working -->
+      <!--<div class="col-md-4 col">
         <div class="block newsletter">
           <h4>Stay in touch</h4>
-          <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>
+          <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>-->
 
           <!-- Begin MailChimp Signup Form -->
-          <div id="mc_embed_signup">
+          <!--<div id="mc_embed_signup">
             <form
                   action="//websurvey.us11.list-manage.com/subscribe/post?u=b1dbc0432a40a6e28b4984351&amp;id=51589fb78a"
                   method="post"
@@ -90,8 +91,8 @@
                 <div id="mce-responses" class="clear">
                   <div class="response" id="mce-error-response" style="display:none"></div>
                   <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;">
+                </div>-->    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <!--<div style="position: absolute; left: -5000px;">
                   <input type="text" name="b_b1dbc0432a40a6e28b4984351_51589fb78a" tabindex="-1" value="">
                 </div>
                 <div class="clear">
@@ -100,10 +101,10 @@
               </div>
             </form>
           </div>
-          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>-->
           <!--End mc_embed_signup-->
-        </div>
-      </div>
+        <!--</div>
+      </div>-->
     </div>
     <div class="row">
       <div id="toplink">
