adding new pages to faq section and changing size of map on contact page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -57,8 +57,9 @@
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown" data-toggle="dropdown">FAQ</a>
                 <!-- Menu -->
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="/faq/" class="menu-item">Getting started</a></li>
+                  <li><a href="/faq/" class="menu-item">Getting Started</a></li>
                   <li><a href="/faq/technical-features/" class="menu-item">Technical Features</a></li>
+                  <li><a href="/faq/availability/" class="menu-item">Hosting</a></li>
                 </ul>
               </li>
               <li>
