--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,13 @@
           <i class="fa fa-angle-right"></i>
         </a>
       </li>
+      <li {% if include.param == "hosting" %} class="active" {% endif %}>
+        <a href="/faq/availability/" class="first">
+          Hosting
+          <small>Availability, Security and Support</small>
+          <i class="fa fa-angle-right"></i>
+        </a>
+      </li>
     </ul>
   </div>
 </div>
