Changed Strategic Data to Logicly
tiny change just keeping this up to date until the new website is ready to go

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -116,9 +116,9 @@
             <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey">
             <span class="sr-only">Home</span>
           </a>
-          <span class="strat-dat"> a
-            <a href="http://www.strategicdata.com.au/" title="Strategic Data" target="_blank">Strategic Data <span class="sr-only">(opens new window)</span>
-            </a> business. &copy; {{ site.time | date: '%Y' }}
+          <span class="strat-dat"> by
+            <a href="https://www.logicly.com.au/" title="Logicly" target="_blank">Logicly<span class="sr-only">(opens new window)</span>
+            </a> &copy; {{ site.time | date: '%Y' }}
           </span>
           <ul class="list-inline footer-menu">
             <li><a href="/about/terms/">Terms</a></li>
