--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,17 +41,23 @@
     <![endif]-->
     <script src="/minjs/ws-main.min.js"></script>
     <script src="/flex_monster_config/component/flexmonster/flexmonster.js"></script>
+    <!-- Google Tag Manager -->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-24601507-1', 'auto');
-      ga('send', 'pageview');
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-K8NQDBM');
     </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body class="page page-index-static" id="top">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NT8W97X" height="0" width="0" style="display:none;visibility:hidden">
+      </iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <a href="#content" class="sr-only">Skip to content</a>
     {% include header.html %}
     <div role="main">
